full-moon/tests/lua53_cases/fail/parser/double-greater-than-binop/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/lua53_cases/fail/parser/double-greater-than-binop
---
error[ast]: expected expression after binary operator
  ┌─ source.lua:2:13
  │
2 │ local x = 1 > > 2
  │             ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:15
  │
2 │ local x = 1 > > 2
  │               ^


